# citrine

./: .gitignore  Cargo.toml  README.md  todo.md
citrine_core/: Cargo.toml
citrine_core/src/: application.rs  configuration.rs  error.rs  lib.rs  middleware.rs  request.rs  request_matcher.rs  response.rs  router.rs  security.rs  server.rs  static_file_server.rs  templates.rs  util.rs  views.rs
citrine_core/src/security/: mod.rs  oidc.rs  security_configuration.rs  simple_jwt.rs
framework/: Cargo.toml
framework/src/: application.rs  lib.rs
sample/: Cargo.toml  banner.txt
sample/public/: index.html
sample/src/: main.rs  mock_data.rs
sample/templates/: error.html  headers.html  index.html
