[package]
name = "citrine_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4.22"
derive_more = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4.38", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
tera = "1.20.0"
lazy_static = "1.4"
once_cell = "1.20.2"
