[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citrine_core = { path = "../citrine_core" }
env_logger = "0.11.5"
log = "0.4.22"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skytable = "0.8.11"
r2d2 = "0.8.10"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.5.2"
